Src/PaxoParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { PaxoListener } from "./PaxoListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class PaxoParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly VAR_DECL = 33;
    public static readonly PKG = 34;
    public static readonly TRY = 35;
    public static readonly CATCH = 36;
    public static readonly ARROW = 37;
    public static readonly INCLUDE = 38;
    public static readonly PAUSE_MODE = 39;
    public static readonly PLAY_MODE = 40;
    public static readonly INT_LITERAL = 41;
    public static readonly UINT_LITERAL = 42;
    public static readonly DECIMAL_LITERAL = 43;
    public static readonly BOOLEAN = 44;
    public static readonly COMPLEX_LITERAL = 45;
    public static readonly IDENTIFIER = 46;
    public static readonly STRING_LITERAL = 47;
    public static readonly CHAR_LITERAL = 48;
    public static readonly EMSTRING_LITERAL = 49;
    public static readonly VECTOR = 50;
    public static readonly NANOTIME_LITERAL = 51;
    public static readonly SLICE_LITERAL = 52;
    public static readonly POINTER_LITERAL = 53;
    public static readonly IPV4_LITERAL = 54;
    public static readonly IPV6_LITERAL = 55;
    public static readonly LINE_COMMENT = 56;
    public static readonly BLOCK_COMMENT = 57;
    public static readonly WS = 58;
    public static readonly RULE_program = 0;
    public static readonly RULE_statement = 1;
    public static readonly RULE_varDeclaration = 2;
    public static readonly RULE_sizePrefix = 3;
    public static readonly RULE_assignment = 4;
    public static readonly RULE_ifElseStatement = 5;
    public static readonly RULE_matchStatement = 6;
    public static readonly RULE_matchCase = 7;
    public static readonly RULE_loopStatement = 8;
    public static readonly RULE_loopMode = 9;
    public static readonly RULE_loopDelimiter = 10;
    public static readonly RULE_loopEndDelimiter = 11;
    public static readonly RULE_tryCatchStatement = 12;
    public static readonly RULE_functionDeclaration = 13;
    public static readonly RULE_pkgDeclaration = 14;
    public static readonly RULE_block = 15;
    public static readonly RULE_parameterList = 16;
    public static readonly RULE_argumentList = 17;
    public static readonly RULE_expression = 18;
    public static readonly RULE_arrayLiteral = 19;
    public static readonly RULE_arrayAccess = 20;

    public static readonly literalNames = [
        null, "';'", "'<'", "'.'", "'>'", "'='", "'['", "']'", "'xxs'", 
        "'xs'", "'s'", "'l'", "'xl'", "'++'", "'--'", "'('", "')'", "'{'", 
        "'}'", "'->'", "'_'", "':'", "'|:'", "'\\uD834\uDD06'", "':|'", 
        "'\\uD834\uDD07'", "','", "'\\u2264'", "'\\u2265'", "'=='", "'\\u2260'", 
        "'\\u00AB'", "'\\u00BB'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        "VAR_DECL", "PKG", "TRY", "CATCH", "ARROW", "INCLUDE", "PAUSE_MODE", 
        "PLAY_MODE", "INT_LITERAL", "UINT_LITERAL", "DECIMAL_LITERAL", "BOOLEAN", 
        "COMPLEX_LITERAL", "IDENTIFIER", "STRING_LITERAL", "CHAR_LITERAL", 
        "EMSTRING_LITERAL", "VECTOR", "NANOTIME_LITERAL", "SLICE_LITERAL", 
        "POINTER_LITERAL", "IPV4_LITERAL", "IPV6_LITERAL", "LINE_COMMENT", 
        "BLOCK_COMMENT", "WS"
    ];
    public static readonly ruleNames = [
        "program", "statement", "varDeclaration", "sizePrefix", "assignment", 
        "ifElseStatement", "matchStatement", "matchCase", "loopStatement", 
        "loopMode", "loopDelimiter", "loopEndDelimiter", "tryCatchStatement", 
        "functionDeclaration", "pkgDeclaration", "block", "parameterList", 
        "argumentList", "expression", "arrayLiteral", "arrayAccess",
    ];

    public get grammarFileName(): string { return "Paxo.g4"; }
    public get literalNames(): (string | null)[] { return PaxoParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return PaxoParser.symbolicNames; }
    public get ruleNames(): string[] { return PaxoParser.ruleNames; }
    public get serializedATN(): number[] { return PaxoParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, PaxoParser._ATN, PaxoParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, PaxoParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 45;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147524352) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & 8388391) !== 0)) {
                {
                {
                this.state = 42;
                this.statement();
                }
                }
                this.state = 47;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 48;
            this.match(PaxoParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 2, PaxoParser.RULE_statement);
        let _la: number;
        try {
            this.state = 69;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 50;
                this.varDeclaration();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 51;
                this.assignment();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 52;
                this.matchStatement();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 53;
                this.ifElseStatement();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 54;
                this.loopStatement();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 55;
                this.tryCatchStatement();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 56;
                this.functionDeclaration();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 57;
                this.pkgDeclaration();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 58;
                this.expression(0);
                this.state = 59;
                this.match(PaxoParser.T__0);
                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 61;
                this.match(PaxoParser.INCLUDE);
                this.state = 62;
                this.match(PaxoParser.T__1);
                this.state = 63;
                this.match(PaxoParser.IDENTIFIER);
                this.state = 66;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 3) {
                    {
                    this.state = 64;
                    this.match(PaxoParser.T__2);
                    this.state = 65;
                    this.match(PaxoParser.IDENTIFIER);
                    }
                }

                this.state = 68;
                this.match(PaxoParser.T__3);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public varDeclaration(): VarDeclarationContext {
        let localContext = new VarDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 4, PaxoParser.RULE_varDeclaration);
        let _la: number;
        try {
            this.state = 95;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 72;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0)) {
                    {
                    this.state = 71;
                    this.sizePrefix();
                    }
                }

                this.state = 74;
                this.match(PaxoParser.VAR_DECL);
                this.state = 75;
                this.match(PaxoParser.IDENTIFIER);
                this.state = 76;
                this.match(PaxoParser.T__4);
                this.state = 77;
                this.expression(0);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 79;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0)) {
                    {
                    this.state = 78;
                    this.sizePrefix();
                    }
                }

                this.state = 81;
                this.match(PaxoParser.VAR_DECL);
                this.state = 82;
                this.match(PaxoParser.IDENTIFIER);
                this.state = 83;
                this.match(PaxoParser.T__5);
                this.state = 85;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 41) {
                    {
                    this.state = 84;
                    this.match(PaxoParser.INT_LITERAL);
                    }
                }

                this.state = 87;
                this.match(PaxoParser.T__6);
                this.state = 88;
                this.match(PaxoParser.T__4);
                this.state = 89;
                this.arrayLiteral();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 91;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0)) {
                    {
                    this.state = 90;
                    this.sizePrefix();
                    }
                }

                this.state = 93;
                this.match(PaxoParser.VAR_DECL);
                this.state = 94;
                this.match(PaxoParser.IDENTIFIER);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sizePrefix(): SizePrefixContext {
        let localContext = new SizePrefixContext(this.context, this.state);
        this.enterRule(localContext, 6, PaxoParser.RULE_sizePrefix);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 97;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignment(): AssignmentContext {
        let localContext = new AssignmentContext(this.context, this.state);
        this.enterRule(localContext, 8, PaxoParser.RULE_assignment);
        try {
            this.state = 106;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 8, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 99;
                this.match(PaxoParser.IDENTIFIER);
                this.state = 100;
                this.match(PaxoParser.T__4);
                this.state = 101;
                this.expression(0);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 102;
                this.match(PaxoParser.IDENTIFIER);
                this.state = 103;
                this.match(PaxoParser.T__12);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 104;
                this.match(PaxoParser.IDENTIFIER);
                this.state = 105;
                this.match(PaxoParser.T__13);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifElseStatement(): IfElseStatementContext {
        let localContext = new IfElseStatementContext(this.context, this.state);
        this.enterRule(localContext, 10, PaxoParser.RULE_ifElseStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 108;
            this.match(PaxoParser.T__14);
            this.state = 109;
            this.expression(0);
            this.state = 110;
            this.match(PaxoParser.T__15);
            this.state = 111;
            this.block();
            this.state = 114;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 37) {
                {
                this.state = 112;
                this.match(PaxoParser.ARROW);
                this.state = 113;
                this.block();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public matchStatement(): MatchStatementContext {
        let localContext = new MatchStatementContext(this.context, this.state);
        this.enterRule(localContext, 12, PaxoParser.RULE_matchStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 116;
            this.match(PaxoParser.T__14);
            this.state = 117;
            this.match(PaxoParser.IDENTIFIER);
            this.state = 118;
            this.match(PaxoParser.T__15);
            this.state = 119;
            this.match(PaxoParser.T__16);
            this.state = 121;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 120;
                this.matchCase();
                }
                }
                this.state = 123;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 20 || _la === 31 || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & 32767) !== 0));
            this.state = 125;
            this.match(PaxoParser.T__17);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public matchCase(): MatchCaseContext {
        let localContext = new MatchCaseContext(this.context, this.state);
        this.enterRule(localContext, 14, PaxoParser.RULE_matchCase);
        try {
            this.state = 134;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case PaxoParser.T__30:
            case PaxoParser.INT_LITERAL:
            case PaxoParser.UINT_LITERAL:
            case PaxoParser.DECIMAL_LITERAL:
            case PaxoParser.BOOLEAN:
            case PaxoParser.COMPLEX_LITERAL:
            case PaxoParser.IDENTIFIER:
            case PaxoParser.STRING_LITERAL:
            case PaxoParser.CHAR_LITERAL:
            case PaxoParser.EMSTRING_LITERAL:
            case PaxoParser.VECTOR:
            case PaxoParser.NANOTIME_LITERAL:
            case PaxoParser.SLICE_LITERAL:
            case PaxoParser.POINTER_LITERAL:
            case PaxoParser.IPV4_LITERAL:
            case PaxoParser.IPV6_LITERAL:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 127;
                this.expression(0);
                this.state = 128;
                this.match(PaxoParser.T__18);
                this.state = 129;
                this.block();
                }
                break;
            case PaxoParser.T__19:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 131;
                this.match(PaxoParser.T__19);
                this.state = 132;
                this.match(PaxoParser.T__18);
                this.state = 133;
                this.block();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public loopStatement(): LoopStatementContext {
        let localContext = new LoopStatementContext(this.context, this.state);
        this.enterRule(localContext, 16, PaxoParser.RULE_loopStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 136;
            this.match(PaxoParser.T__14);
            this.state = 137;
            this.expression(0);
            this.state = 138;
            this.match(PaxoParser.T__15);
            this.state = 139;
            this.match(PaxoParser.T__20);
            this.state = 140;
            this.loopMode();
            this.state = 141;
            this.loopDelimiter();
            this.state = 142;
            this.block();
            this.state = 143;
            this.loopEndDelimiter();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public loopMode(): LoopModeContext {
        let localContext = new LoopModeContext(this.context, this.state);
        this.enterRule(localContext, 18, PaxoParser.RULE_loopMode);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 145;
            _la = this.tokenStream.LA(1);
            if(!(_la === 39 || _la === 40)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public loopDelimiter(): LoopDelimiterContext {
        let localContext = new LoopDelimiterContext(this.context, this.state);
        this.enterRule(localContext, 20, PaxoParser.RULE_loopDelimiter);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 147;
            _la = this.tokenStream.LA(1);
            if(!(_la === 22 || _la === 23)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public loopEndDelimiter(): LoopEndDelimiterContext {
        let localContext = new LoopEndDelimiterContext(this.context, this.state);
        this.enterRule(localContext, 22, PaxoParser.RULE_loopEndDelimiter);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 149;
            _la = this.tokenStream.LA(1);
            if(!(_la === 24 || _la === 25)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public tryCatchStatement(): TryCatchStatementContext {
        let localContext = new TryCatchStatementContext(this.context, this.state);
        this.enterRule(localContext, 24, PaxoParser.RULE_tryCatchStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 151;
            this.match(PaxoParser.TRY);
            this.state = 152;
            this.block();
            this.state = 153;
            this.match(PaxoParser.CATCH);
            this.state = 154;
            this.match(PaxoParser.T__14);
            this.state = 155;
            this.match(PaxoParser.IDENTIFIER);
            this.state = 158;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 3) {
                {
                this.state = 156;
                this.match(PaxoParser.T__2);
                this.state = 157;
                this.match(PaxoParser.IDENTIFIER);
                }
            }

            this.state = 160;
            this.match(PaxoParser.T__15);
            this.state = 161;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public functionDeclaration(): FunctionDeclarationContext {
        let localContext = new FunctionDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 26, PaxoParser.RULE_functionDeclaration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 163;
            this.match(PaxoParser.VAR_DECL);
            this.state = 164;
            this.match(PaxoParser.IDENTIFIER);
            this.state = 165;
            this.match(PaxoParser.T__4);
            this.state = 166;
            this.match(PaxoParser.T__14);
            this.state = 168;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & 33554463) !== 0)) {
                {
                this.state = 167;
                this.parameterList();
                }
            }

            this.state = 170;
            this.match(PaxoParser.T__15);
            this.state = 171;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public pkgDeclaration(): PkgDeclarationContext {
        let localContext = new PkgDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 28, PaxoParser.RULE_pkgDeclaration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 173;
            this.match(PaxoParser.PKG);
            this.state = 174;
            this.match(PaxoParser.IDENTIFIER);
            this.state = 175;
            this.match(PaxoParser.T__4);
            this.state = 176;
            this.match(PaxoParser.T__16);
            this.state = 181;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & 33554463) !== 0)) {
                {
                this.state = 179;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 14, this.context) ) {
                case 1:
                    {
                    this.state = 177;
                    this.varDeclaration();
                    }
                    break;
                case 2:
                    {
                    this.state = 178;
                    this.functionDeclaration();
                    }
                    break;
                }
                }
                this.state = 183;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 184;
            this.match(PaxoParser.T__17);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 30, PaxoParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 186;
            this.match(PaxoParser.T__16);
            this.state = 190;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147524352) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & 8388391) !== 0)) {
                {
                {
                this.state = 187;
                this.statement();
                }
                }
                this.state = 192;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 193;
            this.match(PaxoParser.T__17);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameterList(): ParameterListContext {
        let localContext = new ParameterListContext(this.context, this.state);
        this.enterRule(localContext, 32, PaxoParser.RULE_parameterList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 196;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0)) {
                {
                this.state = 195;
                this.sizePrefix();
                }
            }

            this.state = 198;
            this.match(PaxoParser.VAR_DECL);
            this.state = 199;
            this.match(PaxoParser.IDENTIFIER);
            this.state = 208;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 26) {
                {
                {
                this.state = 200;
                this.match(PaxoParser.T__25);
                this.state = 202;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0)) {
                    {
                    this.state = 201;
                    this.sizePrefix();
                    }
                }
